Fixed some breakpoint sizing on cards to better fit on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -244,7 +244,7 @@ h6 {
 
 /* -- ↓ ↓ ↓ some responsiveness ↓ ↓ ↓ -- */
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
   body {
     overflow: auto;
   }
@@ -264,7 +264,7 @@ h6 {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1023px) {
   .card {
     height: 180px;
   }
@@ -295,7 +295,7 @@ h6 {
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 767px) {
   .card {
     width: 100%;
   }
